import { GeneratedType } from "@cosmjs/proto-signing";
import { MsgCreateWeightedPool } from "./types/prismcore/amm/tx";
import { MsgSetYammConfiguration } from "./types/prismcore/amm/tx";
import { MsgUpdateWeights } from "./types/prismcore/amm/tx";
import { MsgExitTokenExactLpt } from "./types/prismcore/amm/tx";
import { MsgJoinAllTokensExactLpt } from "./types/prismcore/amm/tx";
import { MsgInitializePool } from "./types/prismcore/amm/tx";
import { MsgSingleSwap } from "./types/prismcore/amm/tx";
import { MsgExitExactTokens } from "./types/prismcore/amm/tx";
import { MsgUpdateOraclePricePair } from "./types/prismcore/amm/tx";
import { MsgJoinExactTokens } from "./types/prismcore/amm/tx";
import { MsgProposeMatch } from "./types/prismcore/amm/tx";
import { MsgExitAllTokensExactLpt } from "./types/prismcore/amm/tx";
import { MsgUpdateSwapFee } from "./types/prismcore/amm/tx";
import { MsgWhitelistRoute } from "./types/prismcore/amm/tx";
import { MsgSubmitOrder } from "./types/prismcore/amm/tx";
import { MsgUpdateOraclePriceDataSource } from "./types/prismcore/amm/tx";
import { MsgJoinTokenExactLpt } from "./types/prismcore/amm/tx";
import { MsgSetWhitelistedRouteEnabled } from "./types/prismcore/amm/tx";
import { MsgDeleteOraclePriceDataSource } from "./types/prismcore/amm/tx";
import { MsgBatchSwap } from "./types/prismcore/amm/tx";
import { MsgCancelOrder } from "./types/prismcore/amm/tx";
import { MsgDeleteOraclePricePair } from "./types/prismcore/amm/tx";
import { MsgCreateOraclePricePair } from "./types/prismcore/amm/tx";
import { MsgCreateOraclePriceDataSource } from "./types/prismcore/amm/tx";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/prismfinance.prismcore.amm.MsgCreateWeightedPool", MsgCreateWeightedPool],
    ["/prismfinance.prismcore.amm.MsgSetYammConfiguration", MsgSetYammConfiguration],
    ["/prismfinance.prismcore.amm.MsgUpdateWeights", MsgUpdateWeights],
    ["/prismfinance.prismcore.amm.MsgExitTokenExactLpt", MsgExitTokenExactLpt],
    ["/prismfinance.prismcore.amm.MsgJoinAllTokensExactLpt", MsgJoinAllTokensExactLpt],
    ["/prismfinance.prismcore.amm.MsgInitializePool", MsgInitializePool],
    ["/prismfinance.prismcore.amm.MsgSingleSwap", MsgSingleSwap],
    ["/prismfinance.prismcore.amm.MsgExitExactTokens", MsgExitExactTokens],
    ["/prismfinance.prismcore.amm.MsgUpdateOraclePricePair", MsgUpdateOraclePricePair],
    ["/prismfinance.prismcore.amm.MsgJoinExactTokens", MsgJoinExactTokens],
    ["/prismfinance.prismcore.amm.MsgProposeMatch", MsgProposeMatch],
    ["/prismfinance.prismcore.amm.MsgExitAllTokensExactLpt", MsgExitAllTokensExactLpt],
    ["/prismfinance.prismcore.amm.MsgUpdateSwapFee", MsgUpdateSwapFee],
    ["/prismfinance.prismcore.amm.MsgWhitelistRoute", MsgWhitelistRoute],
    ["/prismfinance.prismcore.amm.MsgSubmitOrder", MsgSubmitOrder],
    ["/prismfinance.prismcore.amm.MsgUpdateOraclePriceDataSource", MsgUpdateOraclePriceDataSource],
    ["/prismfinance.prismcore.amm.MsgJoinTokenExactLpt", MsgJoinTokenExactLpt],
    ["/prismfinance.prismcore.amm.MsgSetWhitelistedRouteEnabled", MsgSetWhitelistedRouteEnabled],
    ["/prismfinance.prismcore.amm.MsgDeleteOraclePriceDataSource", MsgDeleteOraclePriceDataSource],
    ["/prismfinance.prismcore.amm.MsgBatchSwap", MsgBatchSwap],
    ["/prismfinance.prismcore.amm.MsgCancelOrder", MsgCancelOrder],
    ["/prismfinance.prismcore.amm.MsgDeleteOraclePricePair", MsgDeleteOraclePricePair],
    ["/prismfinance.prismcore.amm.MsgCreateOraclePricePair", MsgCreateOraclePricePair],
    ["/prismfinance.prismcore.amm.MsgCreateOraclePriceDataSource", MsgCreateOraclePriceDataSource],
    
];

export { msgTypes }